tests/baselines/reference/resolutionCandidateFromPackageJsonField2(moduleresolution=node10).errors.txt
tests/cases/compiler/test.ts(1,19): error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.


==== /.src/tests/cases/compiler/tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "paths": {
                "foo/*": ["./dist/*"],
                "baz/*.ts": ["./types/*.d.ts"]
            }
        }
    }
    
==== /.src/tests/cases/compiler/dist/bar.ts (0 errors) ====
    export const a = 1234;
    
==== /.src/tests/cases/compiler/types/main.d.ts (0 errors) ====
    export const b: string;
    
==== /.src/tests/cases/compiler/test.ts (1 errors) ====
    import { a } from "foo/bar.ts";
                      ~~~~~~~~~~~~
!!! error TS5097: An import path can only end with a '.ts' extension when 'allowImportingTsExtensions' is enabled.
    import { b } from "baz/main.ts";
    